# sysfetch-flake

./: README.md  flake.nix  pyproject.toml  sysfetch.py
